--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- NAVBAR -->
   <header class="navbar">
-    <div class="logo">STORE</div>
+    <div class="logo">PaddyID</div>
     <nav>
       <a href="index.html" class="active">Home</a>
       <a href="products.html">Products</a>
