--- a/thankyou.html
+++ b/thankyou.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Terima Kasih</title>
+  <title>PaddyID | Terima Kasih</title>
 
+  <!-- CSS GLOBAL -->
   <link rel="stylesheet" href="https://ubedcrm.github.io/survey-ui/css/style.css">
 
   <style>
@@ -18,6 +19,11 @@
       padding: 40px 20px;
     }
 
+    .thankyou .icon {
+      font-size: 64px;
+      margin-bottom: 20px;
+    }
+
     .thankyou h1 {
       font-size: 36px;
       margin-bottom: 12px;
@@ -29,11 +35,6 @@
       line-height: 1.6;
       margin-bottom: 32px;
     }
-
-    .thankyou .icon {
-      font-size: 64px;
-      margin-bottom: 20px;
-    }
   </style>
 </head>
 <body>
@@ -42,7 +43,7 @@
   <header class="navbar">
     <div class="logo">
       <a href="https://ubedcrm.github.io/survey-ui/" style="text-decoration:none;color:#111;">
-        STORE
+        PaddyID
       </a>
     </div>
     <nav>
@@ -58,7 +59,7 @@
     <h1>Terima Kasih!</h1>
     <p>
       Survey kamu berhasil dikirim.  
-      Hadiah akan kami proses sesuai ketentuan.
+      Hadiah akan kami proses sesuai ketentuan yang berlaku.
     </p>
 
     <a href="https://ubedcrm.github.io/survey-ui/" class="btn">
@@ -66,8 +67,9 @@
     </a>
   </section>
 
+  <!-- FOOTER -->
   <footer class="footer">
-    © 2026 Store. All rights reserved.
+    © 2026 PaddyID. All rights reserved.
   </footer>
 
 </body>
