--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>PaddyID</title>
+  <title>PaddyID | Belanja Mudah & Cepat</title>
 
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -11,7 +11,11 @@
 
   <!-- NAVBAR -->
   <header class="navbar">
-    <div class="logo">PaddyID</div>
+    <div class="logo">
+      <a href="https://ubedcrm.github.io/survey-ui/" style="text-decoration:none;color:#111;">
+        PaddyID
+      </a>
+    </div>
     <nav>
       <a href="index.html" class="active">Home</a>
       <a href="products.html">Products</a>
@@ -19,16 +23,26 @@
     </nav>
   </header>
 
-  <!-- HERO / BANNER -->
-  <section class="hero">
-    <div class="hero-text">
-      <h1>Belanja Mudah & Cepat</h1>
-      <p>Produk pilihan dengan kualitas terbaik untuk kebutuhan harianmu</p>
-      <a href="products.html" class="btn">Lihat Produk</a>
+  <!-- HERO PADDY STYLE -->
+  <section class="hero-new hero-pattern">
+    <div class="hero-left">
+      <h1 class="hero-title">Paddy</h1>
+      <p class="hero-sub">
+        Customized Phone Cases &<br>
+        Adorable Goods
+      </p>
+
+      <a href="products.html" class="hero-btn">
+        Shop Now
+      </a>
+    </div>
+
+    <div class="hero-right">
+      <img src="images/hero-banner.png" alt="Paddy Banner">
     </div>
   </section>
 
-  <!-- PRODUCT GRID -->
+  <!-- PRODUK -->
   <section class="products">
     <h2>Produk Terlaris</h2>
 
@@ -63,9 +77,8 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    © 2026 Store. All rights reserved.
+    © 2026 PaddyID. All rights reserved.
   </footer>
 
-  <script src="js/app.js"></script>
 </body>
 </html>
