--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
   <!-- NAVBAR -->
   <header class="navbar">
     <div class="logo">
-      <a href="https://ubedcrm.github.io/survey-ui/" style="text-decoration:none;color:#111;">
-        PaddyID
-      </a>
+      <a href="https://ubedcrm.github.io/survey-ui/">PaddyID</a>
     </div>
     <nav>
       <a href="index.html" class="active">Home</a>
@@ -23,22 +21,26 @@
     </nav>
   </header>
 
-  <!-- HERO PADDY STYLE -->
-  <section class="hero-new hero-pattern">
-    <div class="hero-left">
-      <h1 class="hero-title">Paddy</h1>
-      <p class="hero-sub">
-        Customized Phone Cases &<br>
-        Adorable Goods
-      </p>
+  <!-- HERO -->
+  <section class="hero-wrapper">
+    <div class="hero-card">
 
-      <a href="products.html" class="hero-btn">
-        Shop Now
-      </a>
-    </div>
+      <div class="hero-left">
+        <h1 class="hero-title">Paddy</h1>
+        <p class="hero-sub">
+          Customized Phone Cases &<br>
+          Adorable Goods
+        </p>
 
-    <div class="hero-right">
-      <img src="images/hero-banner.png" alt="Paddy Banner">
+        <a href="products.html" class="hero-btn">
+          Shop Now
+        </a>
+      </div>
+
+      <div class="hero-right">
+        <img src="images/hero-banner.png" alt="Paddy Banner">
+      </div>
+
     </div>
   </section>
 
@@ -47,7 +49,6 @@
     <h2>Produk Terlaris</h2>
 
     <div class="product-grid">
-
       <div class="product-card">
         <img src="images/product-1.jpg" alt="Product">
         <h3>Produk A</h3>
@@ -71,7 +72,6 @@
         <h3>Produk D</h3>
         <p class="price">Rp 179.000</p>
       </div>
-
     </div>
   </section>
 
