--- a/index.html
+++ b/index.html
@@ -40,50 +40,18 @@
       <div class="hero-right">
         <div class="slider" id="heroSlider">
 
-          <div class="slide active"><img src="images/hero-1.jpg"></div>
-          <div class="slide"><img src="images/hero-2.jpg"></div>
-          <div class="slide"><img src="images/hero-3.jpg"></div>
-          <div class="slide"><img src="images/hero-4.jpg"></div>
-          <div class="slide"><img src="images/hero-5.jpg"></div>
-          <div class="slide"><img src="images/hero-6.jpg"></div>
-          <div class="slide"><img src="images/hero-7.jpg"></div>
-          <div class="slide"><img src="images/hero-8.jpg"></div>
-          <div class="slide"><img src="images/hero-9.jpg"></div>
+          <div class="slide active"><img src="images/hero-1.png"></div>
+          <div class="slide"><img src="images/hero-2.png"></div>
+          <div class="slide"><img src="images/hero-3.png"></div>
+          <div class="slide"><img src="images/hero-4.png"></div>
+          <div class="slide"><img src="images/hero-5.png"></div>
+          <div class="slide"><img src="images/hero-6.png"></div>
+          <div class="slide"><img src="images/hero-7.png"></div>
+          <div class="slide"><img src="images/hero-8.png"></div>
+          <div class="slide"><img src="images/hero-9.png"></div>
 
           <div class="dots" id="heroDots"></div>
         </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- PRODUCTS -->
-  <section class="products">
-    <h2>Produk Terlaris</h2>
-    <div class="product-grid">
-
-      <div class="product-card">
-        <img src="images/product-1.jpg">
-        <h3>Produk A</h3>
-        <p class="price">Rp 99.000</p>
-      </div>
-
-      <div class="product-card">
-        <img src="images/product-2.jpg">
-        <h3>Produk B</h3>
-        <p class="price">Rp 129.000</p>
-      </div>
-
-      <div class="product-card">
-        <img src="images/product-3.jpg">
-        <h3>Produk C</h3>
-        <p class="price">Rp 149.000</p>
-      </div>
-
-      <div class="product-card">
-        <img src="images/product-4.jpg">
-        <h3>Produk D</h3>
-        <p class="price">Rp 179.000</p>
       </div>
 
     </div>
