--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
 
       <div class="hero-right">
         <div class="slider" id="heroSlider">
-
           <div class="slide active"><img src="images/hero-1.png"></div>
           <div class="slide"><img src="images/hero-2.png"></div>
           <div class="slide"><img src="images/hero-3.png"></div>
@@ -52,6 +51,39 @@
 
           <div class="dots" id="heroDots"></div>
         </div>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- USP BAR (PINK – TETAP DI BAWAH HERO) -->
+  <section class="usp-bar">
+    <div class="usp-container">
+
+      <div class="usp-item">
+        <span class="usp-icon">😊</span>
+        <p>Garansi kepuasan<br>100%</p>
+      </div>
+
+      <div class="usp-divider"></div>
+
+      <div class="usp-item">
+        <span class="usp-icon">👍</span>
+        <p>Bahan case dan tas<br>menggunakan bahan terbaik</p>
+      </div>
+
+      <div class="usp-divider"></div>
+
+      <div class="usp-item">
+        <span class="usp-icon">📞</span>
+        <p>Pelayanan customer<br>service terbaik</p>
+      </div>
+
+      <div class="usp-divider"></div>
+
+      <div class="usp-item">
+        <span class="usp-icon">☀️</span>
+        <p>Proses cetak dengan<br>Teknologi UV terkini dari Jepang</p>
       </div>
 
     </div>
