--- a/index.html
+++ b/index.html
@@ -57,34 +57,40 @@
   © 2026 PaddyID. All rights reserved.
 </footer>
 
-<!-- USP BAR (PALING BAWAH) -->
+<!-- USP BAR (PALING BAWAH, HORIZONTAL) -->
 <section class="usp-bar">
-  <div class="usp-inner">
+  <div class="usp-row">
 
-    <div class="usp-item">
-      <span class="usp-icon">😊</span>
-      <p>Garansi kepuasan<br>100%</p>
+    <div class="usp-box">
+      <div class="usp-icon">😊</div>
+      <div class="usp-text">Garansi kepuasan<br>100%</div>
     </div>
 
-    <div class="usp-line"></div>
+    <div class="usp-divider"></div>
 
-    <div class="usp-item">
-      <span class="usp-icon">👍</span>
-      <p>Bahan case dan tas<br>menggunakan bahan terbaik</p>
+    <div class="usp-box">
+      <div class="usp-icon">👍</div>
+      <div class="usp-text">
+        Bahan case dan tas<br>menggunakan bahan terbaik
+      </div>
     </div>
 
-    <div class="usp-line"></div>
+    <div class="usp-divider"></div>
 
-    <div class="usp-item">
-      <span class="usp-icon">📞</span>
-      <p>Pelayanan customer<br>service terbaik</p>
+    <div class="usp-box">
+      <div class="usp-icon">📞</div>
+      <div class="usp-text">
+        Pelayanan customer<br>service terbaik
+      </div>
     </div>
 
-    <div class="usp-line"></div>
+    <div class="usp-divider"></div>
 
-    <div class="usp-item">
-      <span class="usp-icon">☀️</span>
-      <p>Proses cetak dengan<br>Teknologi UV Jepang</p>
+    <div class="usp-box">
+      <div class="usp-icon">☀️</div>
+      <div class="usp-text">
+        Proses cetak dengan<br>Teknologi UV Jepang
+      </div>
     </div>
 
   </div>
